[tool.poetry]
name = "zero_to_one_hundred"
version = "0.1.0"
description = "0to100 to learn anything"
authors = ["obar1 <obar1@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
pre-commit = "^3.0.4"
flake8 = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^22.3.0"
pytest-xdist = "^2.3.0"
pylint = "^2.10.2"
colorama = "^0.4.4"
anytree = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
